# sky2

./: .flake8  .gitignore  README.md  pyproject.toml
src/: masks.py  processing.py  widget.py  widget.py.
src/processing/: __init_.py  __init__.py
tests/: conftest.py  test_masks.py  test_processing.py  test_widget.py
